--- a/portfolio.html
+++ b/portfolio.html
@@ -15,8 +15,8 @@
     />
   </head>
 
-  <body>
-    <div class="body">
+  <body  class="body">
+    
       <!--Шапка сайта-->
       <header class="head">
         <div class="container">
@@ -32,7 +32,7 @@
               <ul class="menu">
                 <li><a class="menu-link" href="./index.html">Студия</a></li>
                 <li>
-                  <a class="menu-link" href="./portfolio.html">Портфолио</a>
+                  <a class="menu-link, activ" href="./portfolio.html">Портфолио</a>
                 </li>
                 <li><a class="menu-link" href="#">Контакты</a></li>
               </ul>
@@ -75,7 +75,7 @@
           </ul>
 
           <ul class="portfolio">
-            <li>
+            <li><a href="#">
               <img
                 class="portfolio-foto"
                 src="./images/img1.jpg"
@@ -83,8 +83,9 @@
               />
               <h3>Технокряк</h3>
               <p>Веб-сайт</p>
+            </a>
             </li>
-            <li>
+            <li><a href="#">
               <img
                 class="portfolio-foto"
                 src="./images/img2.jpg"
@@ -92,8 +93,9 @@
               />
               <h3>Постер New Orlean vs Golden Star</h3>
               <p>Дизайн</p>
+            </a>
             </li>
-            <li>
+            <li><a href="#">
               <img
                 class="portfolio-foto"
                 src="./images/img3.jpg"
@@ -101,8 +103,9 @@
               />
               <h3>Ресторан Seafood</h3>
               <p>Приложение</p>
+            </a>
             </li>
-            <li>
+            <li><a href="#">
               <img
                 class="portfolio-foto"
                 src="./images/img4.jpg"
@@ -110,8 +113,9 @@
               />
               <h3>Проект Prime</h3>
               <p>Маркетинг</p>
+            </a>
             </li>
-            <li>
+            <li><a href="#">
               <img
                 class="portfolio-foto"
                 src="./images/img5.jpg"
@@ -119,8 +123,9 @@
               />
               <h3>Проект Boxes</h3>
               <p>Приложение</p>
+            </a>
             </li>
-            <li>
+            <li><a href="#">
               <img
                 class="portfolio-foto"
                 src="./images/img6.jpg"
@@ -128,8 +133,9 @@
               />
               <h3>Inspiration has no Borders</h3>
               <p>Веб-сайт</p>
+            </a>
             </li>
-            <li>
+            <li><a href="#">
               <img
                 class="portfolio-foto"
                 src="./images/img7.jpg"
@@ -137,13 +143,15 @@
               />
               <h3>Издание Limited Edition</h3>
               <p>Дизайн</p>
+            </a>
             </li>
-            <li>
+            <li><a href="#">
               <img class="portfolio-foto" src="./images/img8.jpg" alt="лейбл" />
               <h3>Проект LAB</h3>
               <p>Маркетинг</p>
+            </a>
             </li>
-            <li>
+            <li><a href="">
               <img
                 class="portfolio-foto"
                 src="./images/img9.jpg"
@@ -151,6 +159,7 @@
               />
               <h3>Growing Business</h3>
               <p>Приложение</p>
+            </a>
             </li>
           </ul>
         </div>
@@ -163,7 +172,7 @@
             <h3 class="logo">
               <a href="#"
                 ><span class="first-logo">Web</span
-                ><span class="second-logo">Studio</span></a
+                ><span class="second-logo-footer">Studio</span></a
               >
             </h3>
           </div>
@@ -191,6 +200,6 @@
           </address>
         </div>
       </footer>
-    </div>
+    
   </body>
 </html>
