--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!--Шапка сайта-->
     <header class="head">
       <div class="container top-head">
-        <a class="logo" href="./index.html"
+        <a class="logo top" href="./index.html"
           ><span class="first-logo">Web</span
           ><span class="second-logo">Studio</span></a
         >
@@ -127,36 +127,28 @@
 
         <ul class="team-photo">
           <li>
-            <a href="#"
-              ><img src="./images/team-card1.jpg " alt="Сотрудник фирмы"
-            /></a>
+            <img src="./images/team-card1.jpg " alt="Сотрудник фирмы" />
             <div class="team-title">
               <h3>Игорь Демьяненко</h3>
               <p>Product Designe</p>
             </div>
           </li>
           <li>
-            <a href="#"
-              ><img src="./images/team-card2.jpg" alt="Сотрудница фирмы"
-            /></a>
+            <img src="./images/team-card2.jpg" alt="Сотрудница фирмы" />
             <div class="team-title">
               <h3>Ольга Репина</h3>
               <p>Frontend Developer</p>
             </div>
           </li>
           <li>
-            <a href="#"
-              ><img src="./images/team-card3.jpg" alt="Сотрудник фирмы"
-            /></a>
+            <img src="./images/team-card3.jpg" alt="Сотрудник фирмы" />
             <div class="team-title">
               <h3>Николай Тарасов</h3>
               <p>Marketing</p>
             </div>
           </li>
           <li>
-            <a href="#"
-              ><img src="./images/team-card4.jpg" alt="Сотрудник фиjpg"
-            /></a>
+            <img src="./images/team-card4.jpg" alt="Сотрудник фиjpg" />
             <div class="team-title">
               <h3>Михаил Урмаков</h3>
               <p>UI Designer</p>
@@ -170,14 +162,11 @@
 
     <footer class="footer">
       <div class="container">
-        <div class="footer-logo">
-          <h3 class="logo">
-            <a href="#"
-              ><span class="first-logo">Web</span
-              ><span class="second-logo-footer">Studio</span></a
-            >
-          </h3>
-        </div>
+        <a class="logo second" href="#"
+          ><span class="first-logo">Web</span
+          ><span class="second-logo-footer">Studio</span></a
+        >
+
         <address>
           <ul class="footer-adress">
             <li>
