--- a/index.html
+++ b/index.html
@@ -49,114 +49,115 @@
         </ul>
       </div>
     </header>
+    <main>
+      <!--Герой-->
 
-    <!--Герой-->
+      <section class="hero">
+        <div class="container">
+          <h1 class="hero-text">
+            Эффективные решения <br />
+            для вашего бизнеса
+          </h1>
+          <button class="hero-button" type="button">Заказать услугу</button>
+        </div>
+      </section>
 
-    <section class="hero">
-      <div class="container">
-        <h1 class="hero-text">
-          Эффективные решения <br />
-          для вашего бизнеса
-        </h1>
-        <button class="hero-button" type="button">Заказать услугу</button>
-      </div>
-    </section>
+      <!--Приимущества-->
 
-    <!--Приимущества-->
+      <section class="advantages-block">
+        <div class="container">
+          <ul class="advantages">
+            <li>
+              <h3>Внимание к деталям</h3>
+              <p>
+                Идейные соображения, а также начало повседневной работы по
+                формированию позиции.
+              </p>
+            </li>
 
-    <section class="advantages-block">
-      <div class="container">
-        <ul class="advantages">
-          <li>
-            <h3>Внимание к деталям</h3>
-            <p>
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
+            <li>
+              <h3>Пунктуальность</h3>
+              <p>
+                Задача организации, в особенности же рамки и место обучения
+                кадров влечет за собой.
+              </p>
+            </li>
+            <li>
+              <h3>Планирование</h3>
+              <p>
+                Равным образом консультация с широким активом в значительной
+                степени обуславливает.
+              </p>
+            </li>
+            <li>
+              <h3>Современные тихнологии</h3>
+              <p>
+                Значимость этих проблем настолько очевидна, что реализация
+                плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
 
-          <li>
-            <h3>Пунктуальность</h3>
-            <p>
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </p>
-          </li>
-          <li>
-            <h3>Планирование</h3>
-            <p>
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li>
-            <h3>Современные тихнологии</h3>
-            <p>
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
-      </div>
-    </section>
+      <!--Задачи-->
 
-    <!--Задачи-->
+      <section class="task-container">
+        <div class="container">
+          <h2 class="task-text">Чем мы занимаемся</h2>
+          <ul class="task-photo">
+            <li>
+              <img src="./images/box1.jpg" alt="Рабочий стол с компъютером" />
+            </li>
+            <li>
+              <img src="./images/box2.jpg" alt="Смартфон в руке" />
+            </li>
+            <li>
+              <img src="./images/box3.jpg" alt="Планшет в руках" />
+            </li>
+          </ul>
+        </div>
+      </section>
 
-    <section class="task-container">
-      <div class="container">
-        <h2 class="task-text">Чем мы занимаемся</h2>
-        <ul class="task-photo">
-          <li>
-            <img src="./images/box1.jpg" alt="Рабочий стол с компъютером" />
-          </li>
-          <li>
-            <img src="./images/box2.jpg" alt="Смартфон в руке" />
-          </li>
-          <li>
-            <img src="./images/box3.jpg" alt="Планшет в руках" />
-          </li>
-        </ul>
-      </div>
-    </section>
+      <!--Команда-->
 
-    <!--Команда-->
+      <section class="team">
+        <div class="container">
+          <h2 class="team-text">Наша команда</h2>
 
-    <section class="team">
-      <div class="container">
-        <h2 class="team-text">Наша команда</h2>
-
-        <ul class="team-photo">
-          <li>
-            <img src="./images/team-card1.jpg " alt="Сотрудник фирмы" />
-            <div class="team-title">
-              <h3>Игорь Демьяненко</h3>
-              <p>Product Designe</p>
-            </div>
-          </li>
-          <li>
-            <img src="./images/team-card2.jpg" alt="Сотрудница фирмы" />
-            <div class="team-title">
-              <h3>Ольга Репина</h3>
-              <p>Frontend Developer</p>
-            </div>
-          </li>
-          <li>
-            <img src="./images/team-card3.jpg" alt="Сотрудник фирмы" />
-            <div class="team-title">
-              <h3>Николай Тарасов</h3>
-              <p>Marketing</p>
-            </div>
-          </li>
-          <li>
-            <img src="./images/team-card4.jpg" alt="Сотрудник фиjpg" />
-            <div class="team-title">
-              <h3>Михаил Урмаков</h3>
-              <p>UI Designer</p>
-            </div>
-          </li>
-        </ul>
-      </div>
-    </section>
+          <ul class="team-photo">
+            <li>
+              <img src="./images/team-card1.jpg " alt="Сотрудник фирмы" />
+              <div class="team-title">
+                <h3>Игорь Демьяненко</h3>
+                <p>Product Designe</p>
+              </div>
+            </li>
+            <li>
+              <img src="./images/team-card2.jpg" alt="Сотрудница фирмы" />
+              <div class="team-title">
+                <h3>Ольга Репина</h3>
+                <p>Frontend Developer</p>
+              </div>
+            </li>
+            <li>
+              <img src="./images/team-card3.jpg" alt="Сотрудник фирмы" />
+              <div class="team-title">
+                <h3>Николай Тарасов</h3>
+                <p>Marketing</p>
+              </div>
+            </li>
+            <li>
+              <img src="./images/team-card4.jpg" alt="Сотрудник фиjpg" />
+              <div class="team-title">
+                <h3>Михаил Урмаков</h3>
+                <p>UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
 
     <!-- Подвал -->
 
