--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
 
     <!--Портфолио-->
     <main class="portfolio-main">
-      <div class="section">
+      <section>
         <div class="container">
           <ul class="portfolio-menu">
             <li><button class="portfolio-button" type="button">Все</button></li>
@@ -196,7 +196,7 @@
             </li>
           </ul>
         </div>
-      </div>
+      </section>
     </main>
 
     <!-- Подвал -->
